<resources>
    <string name="app_name">Tourist Vlogger</string>
    <string name="passwordText">Password</string>
    <string name="emailText">E-mail address</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_register">register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="please_log_in">Please log in.</string>
    <string name="nav_title_welcome">Welcome!</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log Out</string>
    <string name="auth">Auth</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="or">or</string>
    <string name="confirm_password">Confirm Password</string>
</resources>